Create UI of : signe up page , verify email address , success verification screen , Forget Password , Reset Password , complete the custome theme for some elements , and add the images for this new screens in images/animations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/on_boarding_images/
+    - assets/images/animations/
     - assets/fonts/
     - assets/icons/
     - assets/logos/
