creating the custom search bar and the category list view , and add categories assests in icons folder , and refactoring the code .

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,4 +35,5 @@ flutter:
     - assets/images/animations/
     - assets/fonts/
     - assets/icons/
+    - assets/icons/categories/
     - assets/logos/
